--- a/package.json
+++ b/package.json
@@ -8,44 +8,65 @@
     "url": "git+ssh://git@github.com/DMan89/ReactExpressReduxMongoDB.git"
   },
   "scripts": {
-    "dev": "webpack-dev-server --progress --content-base public",
+    "test": "mocha -r mock-local-storage --compilers js:babel-core/register --require ./app/test/test_helper.js --recursive ./app/test",
+    "start": "webpack && nodemon",
+    "dev": "webpack-dev-server --hot --inline --progress --content-base public",
     "dev2": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch",
     "tw": "npm run test:watch",
-    "start": "webpack && nodemon",
     "pack": "webpack --watch",
-    "scss": "scss --watch style/scss:public/style",
-    "build": "npm install && scss --update style/scss:public/style && webpack && nodemon"
+    "scss": "scss --watch app/style/scss:public/styles",
+    "build": "npm install && scss --update app/style/scss:public/styles && webpack && nodemon",
+    "prepublish": "npm test && webpack && nodemon"
   },
-  "author": "Dman89",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
+    "axios-mock-adapter": "^1.7.1",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
+    "babel-preset-airbnb": "^2.1.1",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "body-parser": "^1.15.2",
     "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "chai-jquery": "^2.0.0",
+    "cors": "^2.8.1",
     "css-loader": "^0.25.0",
+    "enzyme": "^2.6.0",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "http-server": "^0.9.0",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
+    "method-override": "^2.3.7",
     "mocha": "^2.4.5",
+    "mock-local-storage": "^1.0.2",
+    "mongoose": "^4.7.5",
+    "morgan": "^1.7.0",
+    "moxios": "^0.3.0",
+    "nock": "^9.0.2",
     "node-sass": "^3.10.1",
-    "sass-loader": "^4.0.2",
     "react-addons-test-utils": "^0.14.7",
+    "redux-mock-store": "^1.2.1",
+    "sass-loader": "^4.0.2",
+    "sinon": "^1.17.6",
+    "sinon-mongoose": "^1.3.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
-    "http": "^0.0.0",
+    "google-maps-react": "^1.0.19",
     "jwt-simple": "^0.5.1",
     "lodash": "^3.10.1",
     "mongoose": "^4.7.1",
@@ -57,8 +78,10 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
+    "react-google-maps": "^4.11.0",
     "redux": "^3.0.4",
-    "redux-form": "^6.2.1"
+    "redux-form": "^5.0.1",
+    "redux-thunk": "^2.1.0"
   },
   "bugs": {
     "url": "https://github.com/DMan89/ReactExpressReduxMongoDB/issues"
